--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en">
 <head>
@@ -10,14 +10,27 @@
 <body>
     <h1>Привет Пуси Герл</h1>
     <p>
-    Здесь я знакомлюсь со всякое полезной (нужной хренью) касаемо веб-разработки.
-    В частоности изучаю основы современной верстки веб-страниц и их оформлением, 
-    а также работу логической части веб-страницы в браузере.
+        Здесь я знакомлюсь со всякое полезной (нужной хренью) касаемо веб-разработки.
+        В частоности изучаю основы современной верстки веб-страниц и их оформлением,
+        а также работу логической части веб-страницы в браузере.
     </p>
 
     <p>
-        Для этого на этом сайте я буду страдать, кхм, практиковаться с HTML тегами и их атребутами, стилями CSS с их селукторами, а так же с синтаксисом и логикой JavaScript
+        Для этого на этом сайте я буду страдать, кхм, практиковаться с HTML тегами и их атребутами,
+        стилями CSS с их селукторами, а так же с синтаксисом и логикой JavaScript
     </p>
 
+    <h2>Чо делать</h2>
+    <ol>
+        <li>
+            <a href="Сайт/Layout.html">HTML Верстка</a>
+        </li>
+        <li>
+            <a href="Сайт/CSS.html">CSS Оформление</a>
+        </li>
+        <li>
+            <a href="Сайт/JS.html">JS</a>
+        </li>
+    </ol>
 </body>
 </html>
