--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <script src="script.js"></script>
     <title>Главная</title>
 </head>
 
@@ -32,5 +33,25 @@
             <a href="Сайт/JS.html">JS</a>
         </li>
     </ol>
+    <table border="3" bordercolor="pink" "width="1000">
+        <tr>
+            <td>asdadadadasdadasdadasd</td>
+            <td>asdada</td>
+            <td>asdada</td>
+            <td>hgfhjd</td>
+        </tr>
+        <tr>
+            <td>dadad</td>
+            <td>asdadadadasdadasdadasdasdadadadasdadasdadasd</td>
+            <td>adsada</td>
+            <td>asfasbhnytt</td>
+        </tr>
+        <tr>
+            <td>asdad</td>
+            <td>asdadadadasdadasdadasdasdadadadasdadas</td>       
+            <td>asdad</td>
+            <td>jfkghfhdg</td>
+        </tr>
+    </table>    
 </body>
 </html>
