--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <script src="script.js"></script>
     <title>Главная</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 
@@ -24,34 +25,69 @@
     <h2>Чо делать</h2>
     <ol>
         <li>
-            <a href="Сайт/Layout.html">HTML Верстка</a>
+            <a href="Бум/Layout.html">HTML Верстка</a>
         </li>
         <li>
-            <a href="Сайт/CSS.html">CSS Оформление</a>
+            <a href="Бум/CSS.html">CSS Оформление</a>
         </li>
         <li>
-            <a href="Сайт/JS.html">JS</a>
+            <a href="Бум/JS.html">JS</a>
+        </li>
+        <li>
+            <a href="http://htmlbook.ru/css">Полезная ссылка</a>
         </li>
     </ol>
-    <table border="3" bordercolor="pink" "width="1000">
+    <table border="1" bordercolor="pink" "width="1000">
+        <h3>Професии в геймдеве</h3>
+        <h4>Кто учавствует в разработе игр:</h4>
         <tr>
-            <td>asdadadadasdadasdadasd</td>
+            <td>Геймдизайнеры</td>
             <td>asdada</td>
             <td>asdada</td>
             <td>hgfhjd</td>
         </tr>
         <tr>
-            <td>dadad</td>
+            <td>Сценаристы</td>
             <td>asdadadadasdadasdadasdasdadadadasdadasdadasd</td>
             <td>adsada</td>
             <td>asfasbhnytt</td>
         </tr>
         <tr>
-            <td>asdad</td>
+            <td>Арт - спецы</td>
             <td>asdadadadasdadasdadasdasdadadadasdadas</td>       
             <td>asdad</td>
             <td>jfkghfhdg</td>
         </tr>
-    </table>    
+        <tr>
+            <td>Программисты</td>
+            <td>dbhgj,k.ljjdh</td>
+            <td>dzfbngfxmh</td>
+            <td>ASGhzfdgjkh</td>
+        </tr>
+        <tr>
+            <td>Звукорежиссер</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Тестировщики</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Локализаторы</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Комьюнити - менеджеры</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        </table>
 </body>
 </html>
