--- a/Сайт/Layout.html
+++ b/Сайт/Layout.html
@@ -2,10 +2,11 @@
 
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>Об HTML верстке</title>
 </head>
 <body>
+
     <a href="../index.html">На главную</a>
 </body>
 </html>
