--- a/Сайт/JS.html
+++ b/Сайт/JS.html
@@ -1,8 +1,8 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>JS</title>
 </head>
 <body>
