--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <h2>Чо делать</h2>
     <ol>
         <li>
-            <a href="Бум/Layout.html">HTML Верстка</a>
+            <a href="sait/Layout.html">HTML Верстка</a>
         </li>
         <li>
-            <a href="Бум/CSS.html">CSS Оформление</a>
+            <a href="sait/CSS.html">CSS Оформление</a>
         </li>
         <li>
-            <a href="Бум/JS.html">JS</a>
+            <a href="sait/JS.html">JS</a>
         </li>
         <li>
             <a href="http://htmlbook.ru/css">Полезная ссылка</a>
@@ -54,7 +54,7 @@
         </tr>
         <tr>
             <td>Арт - спецы</td>
-            <td>asdadadadasdadasdadasdasdadadadasdadas</td>       
+            <td>asdadadadasdadasdadasdasdadadadasdadas</td>
             <td>asdad</td>
             <td>jfkghfhdg</td>
         </tr>
@@ -88,6 +88,6 @@
             <td></td>
             <td></td>
         </tr>
-        </table>
+    </table>
 </body>
 </html>
