--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <h2>Чо делать</h2>
     <ol>
         <li>
-            <a href="sait/Layout.html">HTML Верстка</a>
+            <a href="pages/Layout.html">HTML Верстка</a>
         </li>
         <li>
-            <a href="sait/CSS.html">CSS Оформление</a>
+            <a href="pages/CSS.html">CSS Оформление</a>
         </li>
         <li>
-            <a href="sait/JS.html">JS</a>
+            <a href="pages/JS.html">JS</a>
         </li>
         <li>
             <a href="http://htmlbook.ru/css">Полезная ссылка</a>
