--- a/pages/CSS.html
+++ b/pages/CSS.html
@@ -6,7 +6,7 @@
     <title>CSS</title>
 </head>
 <body>
-    <a href="pages/index.html">На главную</a>
+    <a href="index.html">На главную</a>
     <p>Чо такое вообще CSS</p>
     <ol>
         <li>
