--- a/index.html
+++ b/index.html
@@ -37,57 +37,49 @@
             <a href="http://htmlbook.ru/css">Полезная ссылка</a>
         </li>
     </ol>
-    <table border="1" bordercolor="pink" "width="1000">
+    <table border="2.5" bordercolor="pink" width="1000">
         <h3>Професии в геймдеве</h3>
-        <h4>Кто учавствует в разработе игр:</h4>
         <tr>
             <td>Геймдизайнеры</td>
-            <td>asdada</td>
-            <td>asdada</td>
-            <td>hgfhjd</td>
-        </tr>
-        <tr>
-            <td>Сценаристы</td>
-            <td>asdadadadasdadasdadasdasdadadadasdadasdadasd</td>
-            <td>adsada</td>
-            <td>asfasbhnytt</td>
-        </tr>
-        <tr>
-            <td>Арт - спецы</td>
-            <td>asdadadadasdadasdadasdasdadadadasdadas</td>
-            <td>asdad</td>
-            <td>jfkghfhdg</td>
+            <td><p>Именно геймдизайнер создаёт игру, но делает он это только в своей голове, а реализовывать игру предстоит другим специалистам.</p>
+                <p>Своими задумками он должен поделиться с остальными участниками разработки, описав идею игры до мельчайших подробностей в дизайн документе.</p>
+                <p>Геймдизайнера можно сравнить с режиссером фильма, его идеи и наставления для других участников становятся основой игры.
+                Это самая желанная, но и самая ответственная профессия в индустрии.</p>
+                </p>Мало кто знает ведущих программистов, художников, задействованных в разработке игр, но известные геймдизайнеры у всех на слуху.
+                (В русскоязычных компаниях роль главного «выдумщика» выполняет продюсер, а геймдизайнер является лишь оформителем его идей в технически грамотную форму).</p></td>
         </tr>
         <tr>
             <td>Программисты</td>
-            <td>dbhgj,k.ljjdh</td>
-            <td>dzfbngfxmh</td>
-            <td>ASGhzfdgjkh</td>
+            <td><p>Программисты создают базовую механику игр. 
+                От их труда зависит, какие возможности будут в игре, насколько безупречно игра будет работать с технической точки зрения.</p>
+                </p>Качество работы программистов напрямую влияет на результаты труда остальных сотрудников, поэтому они являются основным костяком группы, весь процесс разработки игры крутится вокруг них.</p></td>
         </tr>
         <tr>
             <td>Звукорежиссер</td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td><p>Звукорежиссеры отвечают за звук в видеоигре. Это очень важный аспект проекта, так как от него зависит погружение в геймплейный процесс и атмосфера игры.</p>
+                <p>Такие специалисты записывают всевозможные звуки, музыку, сводят аудиодорожки, записывают голоса озвучки. 
+                Зачастую создание музыки и звуковых эффектов отдают на стороннюю разработку либо студиям, либо отдельным лицам.</p></td>
         </tr>
         <tr>
             <td>Тестировщики</td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td><p>Одна из первых и самых простых ступеней для того, чтобы попасть в геймдев — устроиться тестировщиком. От них зависит финальное качество игрового продукта. 
+                <p>Тестировщики выступают в роли придирчивых игроков, которые играют в альфа или бета-версию проекта, тщательно анализируют весь процесс и документируют его.</p></td>
         </tr>
         <tr>
             <td>Локализаторы</td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td><p>Локализация игр почти всегда выполняется сторонними компаниями на аутсорсе. В них переводят весь проект под контролем одного из разработчиков, а затем озвучивают его (если там есть диалоги, которые нужно озвучить).</p> 
+                <p>Подобное встречается лишь в играх с большим бюджетом, а большинство американских и японских видеоигр существуют лишь с английской и японской локализацией соответственно.</p></td>
         </tr>
         <tr>
             <td>Комьюнити - менеджеры</td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td><p>Комьюнити-менеджер занимается связью с игроками и сообществом в целом.</p>
+                <p></p>В зависимости от проекта, на его плечи ложатся следующие обязанности: ведение аккаунтов в социальных сетях, анонс каких-либо событий, подача информации о будущей игре, выстраивание сообщества в самой игре посредством внутренних инструментов (чаты, конференции, группы, гильдии, команды) и прочее.</p></td>
         </tr>
-    </table>
+        <tr>
+            <td>Служба поддержки</td>
+            <td><p>Саппорт в играх решает проблемы, возникающие у игроков. Причем неважно, технического они характера (игра “вылетает” на одном и том же месте) или социального (один игрок оскорбил другого в онлайн-игре).</p>
+                <p>Конкретный перечень обязанностей зависит от проекта и должности специалиста службы поддержки. В крупных играх за технические и социальные аспекты отвечают разные люди. Отличный тому пример — обширная сеть службы поддержки ММО-РПГ World of Warcraft.</p></td>
+        </tr>
+        </table>
 </body>
 </html>
