--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang = "en">
 <head>
-    <meta charset="utf-8">
-    <script src="script.js"></script>
+    <meta charset = "utf-8">
+    <script src = "script.js"></script>
     <title>Главная</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel = "stylesheet" href= "style.css">
 </head>
 
 
@@ -25,19 +25,19 @@
     <h2>Чо делать</h2>
     <ol>
         <li>
-            <a href="pages/Layout.html">HTML Верстка</a>
+            <a href = "pages/Layout.html">HTML Верстка</a>
         </li>
         <li>
-            <a href="pages/CSS.html">CSS Оформление</a>
+            <a href = "pages/CSS.html">CSS Оформление</a>
         </li>
         <li>
-            <a href="pages/JS.html">JS</a>
+            <a href = "pages/JS.html">JS</a>
         </li>
         <li>
-            <a href="http://htmlbook.ru/css">Полезная ссылка</a>
+            <a href = "http://htmlbook.ru/css">Полезная ссылка</a>
         </li>
     </ol>
-    <table border="2.5" bordercolor="pink" width="1000">
+    <table border = "3" bordercolor = "pink" width = "650">
         <h3>Професии в геймдеве</h3>
         <tr>
             <td>Геймдизайнеры</td>
@@ -45,7 +45,7 @@
                 <p>Своими задумками он должен поделиться с остальными участниками разработки, описав идею игры до мельчайших подробностей в дизайн документе.</p>
                 <p>Геймдизайнера можно сравнить с режиссером фильма, его идеи и наставления для других участников становятся основой игры.
                 Это самая желанная, но и самая ответственная профессия в индустрии.</p>
-                </p>Мало кто знает ведущих программистов, художников, задействованных в разработке игр, но известные геймдизайнеры у всех на слуху.
+                <p>Мало кто знает ведущих программистов, художников, задействованных в разработке игр, но известные геймдизайнеры у всех на слуху.
                 (В русскоязычных компаниях роль главного «выдумщика» выполняет продюсер, а геймдизайнер является лишь оформителем его идей в технически грамотную форму).</p></td>
         </tr>
         <tr>
