--- a/pages/Layout.html
+++ b/pages/Layout.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang = "en">
 <head>
-    <meta charset="utf-8">
+    <meta charset = "utf-8">
     <title>Об HTML верстке</title>
 </head>
 <body>
-
-    <a href="../index.html">На главную</a>
+    <ol>
+        <li>
+         <a href = ""></a>
+        </li>
+        <li>
+        <a href = "../index.html">На главную</a>
+        </li>
+    </ol>
 </body>
 </html>
