--- a/pages/JS.html
+++ b/pages/JS.html
@@ -1,11 +1,19 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
-<html lang="en">
+<html lang = "en">
 <head>
-    <meta charset="utf-8">
+    <meta charset = "utf-8">
     <title>JS</title>
 </head>
 <body>
-    <a href= "../index.html">На главную</a>
+    <img src = "JS Logo.jpg" alt = "CSS Icon" widt = "100" height = "100">
+    <ol>
+        <li>
+         <a href = ""></a>
+        </li>
+        <li>
+         <a href = "../index.html">На главную</a>
+        </li>
+    </ol>
 </body>
 </html>
