--- a/index.html
+++ b/index.html
@@ -1,16 +1,44 @@
 <!DOCTYPE html>
 
-<html lang = "en">
+<html lang="en">
 <head>
-    <meta charset = "utf-8">
-    <script src = "script.js"></script>
+    <meta charset="utf-8">
+    <script src="script.js"></script>
     <title>Главная</title>
-    <link rel = "stylesheet" href= "style.css">
-</head>
-
-
+    <link rel="stylesheet" href="style.css">
+         <style>
+             h1 {
+                 color: #ff8c00;
+                 font-weight: 100;
+                 font-style: initial;
+             }
+             h2 {
+                 color: #fff000;
+                 font-weight: 100;
+                 font-style: initial;
+             }
+             h 
+             {
+                 color: #ecc148;
+                 font-weight: 500;
+                 font-style: initial;
+             }
+             table 
+             {
+                 color: #000000;
+             }
+             p 
+             {
+                 font-weight: 300;
+                 font-style: initial;
+             }
+             body {
+                 background-color: whitesmoke;
+             }
+         </style>
+</head >
 <body>
-    <h1>Привет Пуси Герл</h1>
+    <h1> Привет Пуси Герл</h1>
     <p>
         Здесь я знакомлюсь со всякое полезной (нужной хренью) касаемо веб-разработки.
         В частоности изучаю основы современной верстки веб-страниц и их оформлением,
@@ -22,64 +50,87 @@
         стилями CSS с их селукторами, а так же с синтаксисом и логикой JavaScript
     </p>
 
-    <h2>Чо делать</h2>
+    <h2> Чо делать</h2>
     <ol>
         <li>
-            <a href = "pages/Layout.html">HTML Верстка</a>
+            <a href="pages/Layout.html"> HTML Верстка</a>
         </li>
         <li>
-            <a href = "pages/CSS.html">CSS Оформление</a>
+            <a href="pages/CSS.html"> CSS Оформление</a>
         </li>
         <li>
-            <a href = "pages/JS.html">JS</a>
+            <a href="pages/JS.html"> JS</a>
         </li>
         <li>
-            <a href = "http://htmlbook.ru/css">Полезная ссылка</a>
+            <a href="http://htmlbook.ru/css"> Полезная ссылка</a>
         </li>
     </ol>
-    <table border = "3" bordercolor = "pink" width = "650">
-        <h3>Професии в геймдеве</h3>
+    <table border="1" bordercolor="pink" width="750">
+
+        <h>Професии в геймдеве</h>
         <tr>
-            <td>Геймдизайнеры</td>
-            <td><p>Именно геймдизайнер создаёт игру, но делает он это только в своей голове, а реализовывать игру предстоит другим специалистам.</p>
-                <p>Своими задумками он должен поделиться с остальными участниками разработки, описав идею игры до мельчайших подробностей в дизайн документе.</p>
-                <p>Геймдизайнера можно сравнить с режиссером фильма, его идеи и наставления для других участников становятся основой игры.
-                Это самая желанная, но и самая ответственная профессия в индустрии.</p>
-                <p>Мало кто знает ведущих программистов, художников, задействованных в разработке игр, но известные геймдизайнеры у всех на слуху.
-                (В русскоязычных компаниях роль главного «выдумщика» выполняет продюсер, а геймдизайнер является лишь оформителем его идей в технически грамотную форму).</p></td>
+            <td> Геймдизайнеры</td>
+            <td>
+                <p> Именно геймдизайнер создаёт игру, но делает он это только в своей голове, а реализовывать игру предстоит другим специалистам.</p>
+                <p> Своими задумками он должен поделиться с остальными участниками разработки, описав идею игры до мельчайших подробностей в дизайн документе.</p>
+                <p>
+                    Геймдизайнера можно сравнить с режиссером фильма, его идеи и наставления для других участников становятся основой игры.
+                    Это самая желанная, но и самая ответственная профессия в индустрии.
+                </p>
+                <p>
+                    Мало кто знает ведущих программистов, художников, задействованных в разработке игр, но известные геймдизайнеры у всех на слуху.
+                    (В русскоязычных компаниях роль главного «выдумщика» выполняет продюсер, а геймдизайнер является лишь оформителем его идей в технически грамотную форму).
+                </p>
+            </td>
         </tr>
         <tr>
-            <td>Программисты</td>
-            <td><p>Программисты создают базовую механику игр. 
-                От их труда зависит, какие возможности будут в игре, насколько безупречно игра будет работать с технической точки зрения.</p>
-                </p>Качество работы программистов напрямую влияет на результаты труда остальных сотрудников, поэтому они являются основным костяком группы, весь процесс разработки игры крутится вокруг них.</p></td>
+            <td> Программисты</td>
+            <td>
+                <p>
+                    Программисты создают базовую механику игр.
+                    От их труда зависит, какие возможности будут в игре, насколько безупречно игра будет работать с технической точки зрения.
+                </p>
+                <p> Качество работы программистов напрямую влияет на результаты труда остальных сотрудников, поэтому они являются основным костяком группы, весь процесс разработки игры крутится вокруг них.</p>
+            </td>
         </tr>
         <tr>
-            <td>Звукорежиссер</td>
-            <td><p>Звукорежиссеры отвечают за звук в видеоигре. Это очень важный аспект проекта, так как от него зависит погружение в геймплейный процесс и атмосфера игры.</p>
-                <p>Такие специалисты записывают всевозможные звуки, музыку, сводят аудиодорожки, записывают голоса озвучки. 
-                Зачастую создание музыки и звуковых эффектов отдают на стороннюю разработку либо студиям, либо отдельным лицам.</p></td>
+            <td> Звукорежиссер</td>
+            <td>
+                <p> Звукорежиссеры отвечают за звук в видеоигре. Это очень важный аспект проекта, так как от него зависит погружение в геймплейный процесс и атмосфера игры.</p>
+                <p>
+                    Такие специалисты записывают всевозможные звуки, музыку, сводят аудиодорожки, записывают голоса озвучки.
+                    Зачастую создание музыки и звуковых эффектов отдают на стороннюю разработку либо студиям, либо отдельным лицам.
+                </p>
+            </td>
         </tr>
         <tr>
-            <td>Тестировщики</td>
-            <td><p>Одна из первых и самых простых ступеней для того, чтобы попасть в геймдев — устроиться тестировщиком. От них зависит финальное качество игрового продукта. 
-                <p>Тестировщики выступают в роли придирчивых игроков, которые играют в альфа или бета-версию проекта, тщательно анализируют весь процесс и документируют его.</p></td>
+            <td> Тестировщики</td>
+            <td>
+                <p> Одна из первых и самых простых ступеней для того, чтобы попасть в геймдев — устроиться тестировщиком. От них зависит финальное качество игрового продукта.
+                <p> Тестировщики выступают в роли придирчивых игроков, которые играют в альфа или бета-версию проекта, тщательно анализируют весь процесс и документируют его.</p>
+            </td>
         </tr>
         <tr>
-            <td>Локализаторы</td>
-            <td><p>Локализация игр почти всегда выполняется сторонними компаниями на аутсорсе. В них переводят весь проект под контролем одного из разработчиков, а затем озвучивают его (если там есть диалоги, которые нужно озвучить).</p> 
-                <p>Подобное встречается лишь в играх с большим бюджетом, а большинство американских и японских видеоигр существуют лишь с английской и японской локализацией соответственно.</p></td>
+            <td> Локализаторы</td>
+            <td>
+                <p> Локализация игр почти всегда выполняется сторонними компаниями на аутсорсе. В них переводят весь проект под контролем одного из разработчиков, а затем озвучивают его (если там есть диалоги, которые нужно озвучить).</p>
+                <p> Подобное встречается лишь в играх с большим бюджетом, а большинство американских и японских видеоигр существуют лишь с английской и японской локализацией соответственно.</p>
+            </td>
         </tr>
         <tr>
-            <td>Комьюнити - менеджеры</td>
-            <td><p>Комьюнити-менеджер занимается связью с игроками и сообществом в целом.</p>
-                <p></p>В зависимости от проекта, на его плечи ложатся следующие обязанности: ведение аккаунтов в социальных сетях, анонс каких-либо событий, подача информации о будущей игре, выстраивание сообщества в самой игре посредством внутренних инструментов (чаты, конференции, группы, гильдии, команды) и прочее.</p></td>
+            <td> Комьюнити - менеджеры</td>
+            <td>
+                <p> Комьюнити-менеджер занимается связью с игроками и сообществом в целом.</p>
+                <p> В зависимости от проекта, на его плечи ложатся следующие обязанности: ведение аккаунтов в социальных сетях, анонс каких-либо событий, подача информации о будущей игре, выстраивание сообщества в самой игре посредством внутренних инструментов (чаты, конференции, группы, гильдии, команды) и прочее.</p>
+            </td>
         </tr>
         <tr>
-            <td>Служба поддержки</td>
-            <td><p>Саппорт в играх решает проблемы, возникающие у игроков. Причем неважно, технического они характера (игра “вылетает” на одном и том же месте) или социального (один игрок оскорбил другого в онлайн-игре).</p>
-                <p>Конкретный перечень обязанностей зависит от проекта и должности специалиста службы поддержки. В крупных играх за технические и социальные аспекты отвечают разные люди. Отличный тому пример — обширная сеть службы поддержки ММО-РПГ World of Warcraft.</p></td>
+            <td> Служба поддержки</td>
+            <td>
+                <p> Саппорт в играх решает проблемы, возникающие у игроков. Причем неважно, технического они характера (игра “вылетает” на одном и том же месте) или социального (один игрок оскорбил другого в онлайн-игре).</p>
+                <p> Конкретный перечень обязанностей зависит от проекта и должности специалиста службы поддержки. В крупных играх за технические и социальные аспекты отвечают разные люди. Отличный тому пример — обширная сеть службы поддержки ММО-РПГ World of Warcraft.</p>
+            </td>
         </tr>
-        </table>
+    </table>
 </body>
-</html>
+        </html >
