--- a/pages/CSS.html
+++ b/pages/CSS.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 
-<html lang = "en">
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <title>CSS</title>
 </head>
 <body>
-    <img src = "css.png" alt = "CSS Icon" widt = "100" height ="100">
+    <img src= alt="CSS Icon" widt="100" height="100">
 
-    <a href= "../index.html">На главную</a>
+    <a href="../index.html">На главную</a>
     <p>Чо такое вообще CSS</p>
     <ol>
         <li>
             Ссылка на вики -
-            <a href = "https://ru.wikipedia.org/wiki/CSS">https://ru.wikipedia.org/wiki/CSS</a>
+            <a href="https://ru.wikipedia.org/wiki/CSS">https://ru.wikipedia.org/wiki/CSS</a>
         </li>
         <li>
             Ссылка на рандом херню с инета -
-            <a href = "https://developer.mozilla.org/en-US/docs/Learn/CSS/First_steps/What_is_CSS">https://developer.mozilla.org/en-US/docs/Learn/CSS/First_steps/What_is_CSS</a>
+            <a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/First_steps/What_is_CSS">https://developer.mozilla.org/en-US/docs/Learn/CSS/First_steps/What_is_CSS</a>
         </li>
     </ol>
 </body>
