--- a/pages/JS.html
+++ b/pages/JS.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 
-<html lang = "en">
+<html lang="en">
 <head>
-    <meta charset = "utf-8">
+    <meta charset="utf-8">
     <title>JS</title>
 </head>
 <body>
-    <img src = "JS Logo.jpg" alt = "CSS Icon" widt = "100" height = "100">
+    <img src="" alt="CSS Icon" widt="100" height="100">
     <ol>
         <li>
-         <a href = ""></a>
+            <a href=""></a>
         </li>
         <li>
-         <a href = "../index.html">На главную</a>
+            <a href="../index.html">На главную</a>
         </li>
     </ol>
 </body>
