--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <script src="script.js"></script>
+    <meta charset = "utf-8">
+    <script src = "script.js"></script>
     <title>Главная</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel = "stylesheet" href="style.css">
 <style>
         h1 
     {
@@ -56,19 +56,19 @@
     <h2> Чо делать</h2>
     <ol>
         <li>
-            <a href="pages/Layout.html"> HTML Верстка</a>
+            <a href = "pages/Layout.html"> HTML Верстка</a>
         </li>
         <li>
-            <a href="pages/CSS.html"> CSS Оформление</a>
+            <a href = "pages/CSS.html"> CSS Оформление</a>
         </li>
         <li>
-            <a href="pages/JS.html"> JS</a>
+            <a href = "pages/JS.html"> JS</a>
         </li>
         <li>
-            <a href="http://htmlbook.ru/css"> Полезная ссылка</a>
+            <a href = "http://htmlbook.ru/css"> Полезная ссылка</a>
         </li>
     </ol>
-    <table border="1" bordercolor="pink" width="750">
+    <table borde r= "1" bordercolor = "pink" width = "750">
 
         <h>Професии в геймдеве</h>
         <tr>
@@ -137,3 +137,5 @@
     </table>
 </body>
         </html >
+//Привет
+//Hello
