--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 </style> 
 </head >
 <body>
+    <img src="/upload/resize_cache/iblock/70e/500_714_10b9a44033642a4440a69f491fd96ee4b/70eaf48bf52622f007f1dd3f6908bf61.jpg" alt="Костюм Девушка Бэтмена SM" itemprop="image" data-title="Костюм Девушка Бэтмена SM" style="background-image: url(&quot;/upload/resize_cache/iblock/70e/500_714_10b9a44033642a4440a69f491fd96ee4b/70eaf48bf52622f007f1dd3f6908bf61.jpg&quot;); background-size: 100%; background-position: 67.6812% 0%;">
     <h1> Привет Пуси Герл</h1>
     <p>
         Здесь я знакомлюсь со всякое полезной (нужной хренью) касаемо веб-разработки.
